set(PROJECT_NAME tests)

################################################################################
# Source groups
################################################################################
set(Headers
    "pch.h"
)
source_group("Headers" FILES ${Headers})

set(Sources
    "challenge_14apr2020.cpp"
    "challenge_21apr2020.cpp"
    "challenge_28apr2020.cpp"
    "challenge_30apr2020.cpp"
    "challenge_7apr2020.cpp"
    "p1.cpp"
    "p10.cpp"
    "p100.cpp"
    "p1000.cpp"
    "p1001.cpp"
    "p1002.cpp"
    "p1003.cpp"
    "p1004.cpp"
    "p1005.cpp"
    "p1006.cpp"
    "p1007.cpp"
    "P1008.cpp"
    "p1009.cpp"
    "p101.cpp"
    "p1010.cpp"
    "p1011.cpp"
    "p1012.cpp"
    "p1013.cpp"
    "p1014.cpp"
    "p1015.cpp"
    "p1016.cpp"
    "p1017.cpp"
    "p1018.cpp"
    "p1019.cpp"
    "p102.cpp"
    "p1020.cpp"
    "p1021.cpp"
    "p1022.cpp"
    "p1023.cpp"
    "p1024.cpp"
    "p1025.cpp"
    "p1026.cpp"
    "p1027.cpp"
    "p1028.cpp"
    "p1029.cpp"
    "p103.cpp"
    "p1030.cpp"
    "p1031.cpp"
    "p1032.cpp"
    "p1033.cpp"
    "p1034.cpp"
    "p1035.cpp"
    "p1036.cpp"
    "p1037.cpp"
    "p1038.cpp"
    "p1039.cpp"
    "p104.cpp"
    "p1040.cpp"
    "p1041.cpp"
    "p1042.cpp"
    "p1043.cpp"
    "p1044.cpp"
    "p1045.cpp"
    "p1046.cpp"
    "p1047.cpp"
    "p1048.cpp"
    "p1049.cpp"
    "p105.cpp"
    "p1050.cpp"
    "p1051.cpp"
    "p1052.cpp"
    "p1053.cpp"
    "p1054.cpp"
    "p1055.cpp"
    "p1056.cpp"
    "p1057.cpp"
    "p1058.cpp"
    "p1059.cpp"
    "p106.cpp"
    "p1060.cpp"
    "p1061.cpp"
    "p1062.cpp"
    "p1063.cpp"
    "p1064.cpp"
    "p1065.cpp"
    "p1066.cpp"
    "p1067.cpp"
    "p1068.cpp"
    "p1069.cpp"
    "p107.cpp"
    "p1070.cpp"
    "p1071.cpp"
    "p1072.cpp"
    "p1073.cpp"
    "p1074.cpp"
    "p1075.cpp"
    "p1076.cpp"
    "p1077.cpp"
    "p1078.cpp"
    "p1079.cpp"
    "p108.cpp"
    "p1080.cpp"
    "p1081.cpp"
    "p1082.cpp"
    "p1083.cpp"
    "p1084.cpp"
    "p1085.cpp"
    "p1086.cpp"
    "p1087.cpp"
    "p1088.cpp"
    "p1089.cpp"
    "p109.cpp"
    "p1090.cpp"
    "p1091.cpp"
    "p1092.cpp"
    "p1093.cpp"
    "p1094.cpp"
    "p1095.cpp"
    "p1096.cpp"
    "p1097.cpp"
    "p1098.cpp"
    "p1099.cpp"
    "p11.cpp"
    "p110.cpp"
    "p1100.cpp"
    "p1101.cpp"
    "p1102.cpp"
    "p1103.cpp"
    "p1104.cpp"
    "p1105.cpp"
    "p1106.cpp"
    "p1107.cpp"
    "p1108.cpp"
    "p1109.cpp"
    "p111.cpp"
    "p1110.cpp"
    "p1111.cpp"
    "p1112.cpp"
    "p1113.cpp"
    "p1114.cpp"
    "p1115.cpp"
    "p1116.cpp"
    "p1117.cpp"
    "p1118.cpp"
    "p1119.cpp"
    "p112.cpp"
    "p1120.cpp"
    "p1121.cpp"
    "p1122.cpp"
    "p1123.cpp"
    "p1124.cpp"
    "p1125.cpp"
    "p1126.cpp"
    "p1127.cpp"
    "p1128.cpp"
    "p1129.cpp"
    "p113.cpp"
    "p1130.cpp"
    "p1131.cpp"
    "p1132.cpp"
    "p1133.cpp"
    "p1134.cpp"
    "p1135.cpp"
    "p1136.cpp"
    "p1137.cpp"
    "p1138.cpp"
    "p1139.cpp"
    "p114.cpp"
    "p1140.cpp"
    "p1141.cpp"
    "p1142.cpp"
    "p1143.cpp"
    "p1144.cpp"
    "p1145.cpp"
    "p1146.cpp"
    "p1147.cpp"
    "p1148.cpp"
    "p1149.cpp"
    "p115.cpp"
    "p1150.cpp"
    "p1151.cpp"
    "p1152.cpp"
    "p1153.cpp"
    "p1154.cpp"
    "p1155.cpp"
    "p1156.cpp"
    "p1157.cpp"
    "p1158.cpp"
    "p1159.cpp"
    "p116.cpp"
    "p1160.cpp"
    "p1161.cpp"
    "p1162.cpp"
    "p1163.cpp"
    "p1164.cpp"
    "p1165.cpp"
    "p1166.cpp"
    "p1167.cpp"
    "p1168.cpp"
    "p1169.cpp"
    "p117.cpp"
    "p1170.cpp"
    "p1171.cpp"
    "p1172.cpp"
    "p1173.cpp"
    "p1174.cpp"
    "p1175.cpp"
    "p1176.cpp"
    "p1177.cpp"
    "p1178.cpp"
    "p1179.cpp"
    "p118.cpp"
    "p1180.cpp"
    "p1181.cpp"
    "p1182.cpp"
    "p1183.cpp"
    "p1184.cpp"
    "p1185.cpp"
    "p1186.cpp"
    "p1187.cpp"
    "p1188.cpp"
    "p1189.cpp"
    "p119.cpp"
    "p1190.cpp"
    "p1191.cpp"
    "p1192.cpp"
    "p1193.cpp"
    "p1194.cpp"
    "p1195.cpp"
    "p1196.cpp"
    "p1197.cpp"
    "p1198.cpp"
    "p1199.cpp"
    "p12.cpp"
    "p120.cpp"
    "p1200.cpp"
    "p1201.cpp"
    "p1202.cpp"
    "p1203.cpp"
    "p1204.cpp"
    "p1205.cpp"
    "p1206.cpp"
    "p1207.cpp"
    "p1208.cpp"
    "p1209.cpp"
    "p121.cpp"
    "p1210.cpp"
    "p1211.cpp"
    "p1212.cpp"
    "p1213.cpp"
    "p1214.cpp"
    "p1215.cpp"
    "p1216.cpp"
    "p1217.cpp"
    "p1218.cpp"
    "p1219.cpp"
    "p122.cpp"
    "p1220.cpp"
    "p1221.cpp"
    "p1222.cpp"
    "p1223.cpp"
    "p1224.cpp"
    "p1225.cpp"
    "p1226.cpp"
    "p1227.cpp"
    "p1228.cpp"
    "p1229.cpp"
    "p123.cpp"
    "p1230.cpp"
    "p1231.cpp"
    "p1232.cpp"
    "p1233.cpp"
    "p1234.cpp"
    "p1235.cpp"
    "p1236.cpp"
    "p1237.cpp"
    "p1238.cpp"
    "p1239.cpp"
    "p124.cpp"
    "p1240.cpp"
    "p1241.cpp"
    "p1242.cpp"
    "p1243.cpp"
    "p1244.cpp"
    "p1245.cpp"
    "p1246.cpp"
    "p1247.cpp"
    "p1248.cpp"
    "p1249.cpp"
    "p125.cpp"
    "p1250.cpp"
    "p1251.cpp"
    "p1252.cpp"
    "p1253.cpp"
    "p1254.cpp"
    "p1255.cpp"
    "p1256.cpp"
    "p1257.cpp"
    "p1258.cpp"
    "p1259.cpp"
    "p126.cpp"
    "p1260.cpp"
    "p1261.cpp"
    "p1262.cpp"
    "p1263.cpp"
    "p1264.cpp"
    "p1265.cpp"
    "p1266.cpp"
    "p1267.cpp"
    "p1268.cpp"
    "p1269.cpp"
    "p127.cpp"
    "p1270.cpp"
    "p1271.cpp"
    "p1272.cpp"
    "p1273.cpp"
    "p1274.cpp"
    "p1275.cpp"
    "p1276.cpp"
    "p1277.cpp"
    "p1278.cpp"
    "p1279.cpp"
    "p128.cpp"
    "p1280.cpp"
    "p1281.cpp"
    "p1282.cpp"
    "p1283.cpp"
    "p1284.cpp"
    "p1285.cpp"
    "p1286.cpp"
    "p1287.cpp"
    "p1288.cpp"
    "p1289.cpp"
    "p129.cpp"
    "p1290.cpp"
    "p1291.cpp"
    "p1292.cpp"
    "p1293.cpp"
    "p1294.cpp"
    "p1295.cpp"
    "p1296.cpp"
    "p1297.cpp"
    "p1298.cpp"
    "p1299.cpp"
    "p13.cpp"
    "p130.cpp"
    "p1300.cpp"
    "p1301.cpp"
    "p1302.cpp"
    "p1303.cpp"
    "p1304.cpp"
    "p1305.cpp"
    "p1306.cpp"
    "p1307.cpp"
    "p1308.cpp"
    "p1309.cpp"
    "p131.cpp"
    "p1310.cpp"
    "p1311.cpp"
    "p1312.cpp"
    "p1313.cpp"
    "p1314.cpp"
    "p1315.cpp"
    "p1316.cpp"
    "p1317.cpp"
    "p1318.cpp"
    "p1319.cpp"
    "p132.cpp"
    "p1320.cpp"
    "p1321.cpp"
    "p1322.cpp"
    "p1323.cpp"
    "p1324.cpp"
    "p1325.cpp"
    "p1326.cpp"
    "p1327.cpp"
    "p1328.cpp"
    "p1329.cpp"
    "p133.cpp"
    "p1330.cpp"
    "p1331.cpp"
    "p1332.cpp"
    "p1333.cpp"
    "p1334.cpp"
    "p1335.cpp"
    "p1336.cpp"
    "p1337.cpp"
    "p1338.cpp"
    "p1339.cpp"
    "p134.cpp"
    "p1340.cpp"
    "p1341.cpp"
    "p1342.cpp"
    "p1343.cpp"
    "p1344.cpp"
    "p1345.cpp"
    "p1346.cpp"
    "p1347.cpp"
    "p1348.cpp"
    "p1349.cpp"
    "p135.cpp"
    "p1350.cpp"
    "p1351.cpp"
    "p1352.cpp"
    "p1353.cpp"
    "p1354.cpp"
    "p1355.cpp"
    "p1356.cpp"
    "p1357.cpp"
    "p1358.cpp"
    "p1359.cpp"
    "p136.cpp"
    "p1360.cpp"
    "p1361.cpp"
    "p1362.cpp"
    "p1363.cpp"
    "p1364.cpp"
    "p1365.cpp"
    "p1366.cpp"
    "p1367.cpp"
    "p1368.cpp"
    "p1369.cpp"
    "p137.cpp"
    "p1370.cpp"
    "p1371.cpp"
    "p1372.cpp"
    "p1373.cpp"
    "p1374.cpp"
    "p1375.cpp"
    "p1376.cpp"
    "p1377.cpp"
    "p1378.cpp"
    "p1379.cpp"
    "p138.cpp"
    "p1380.cpp"
    "p1381.cpp"
    "p1382.cpp"
    "p1383.cpp"
    "p1384.cpp"
    "p1385.cpp"
    "p1386.cpp"
    "p1387.cpp"
    "p1388.cpp"
    "p1389.cpp"
    "p139.cpp"
    "p1390.cpp"
    "p1391.cpp"
    "p1392.cpp"
    "p1393.cpp"
    "p1394.cpp"
    "p1395.cpp"
    "p1396.cpp"
    "p1397.cpp"
    "p1398.cpp"
    "p1399.cpp"
    "p14.cpp"
    "p140.cpp"
    "p1400.cpp"
    "p1401.cpp"
    "p1402.cpp"
    "p1403.cpp"
    "p1404.cpp"
    "p1405.cpp"
    "p1406.cpp"
    "p1407.cpp"
    "p1408.cpp"
    "p1409.cpp"
    "p141.cpp"
    "p1410.cpp"
    "p1411.cpp"
    "p1412.cpp"
    "p1413.cpp"
    "p1414.cpp"
    "p1415.cpp"
    "p1416.cpp"
    "p1417.cpp"
    "p1418.cpp"
    "p1419.cpp"
    "p142.cpp"
    "p1420.cpp"
    "p1421.cpp"
    "p1422.cpp"
    "p1423.cpp"
    "p1424.cpp"
    "p1425.cpp"
    "p1426.cpp"
    "p1427.cpp"
    "p1428.cpp"
    "p1429.cpp"
    "p143.cpp"
    "p1430.cpp"
    "p1431.cpp"
    "p1432.cpp"
    "p1433.cpp"
    "p1434.cpp"
    "p1435.cpp"
    "p1436.cpp"
    "p1437.cpp"
    "p1438.cpp"
    "p1439.cpp"
    "p144.cpp"
    "p1440.cpp"
    "p1441.cpp"
    "p1442.cpp"
    "p1443.cpp"
    "p1444.cpp"
    "p1445.cpp"
    "p1446.cpp"
    "p1447.cpp"
    "p1448.cpp"
    "p1449.cpp"
    "p145.cpp"
    "p1450.cpp"
    "p1451.cpp"
    "p1452.cpp"
    "p1453.cpp"
    "p1454.cpp"
    "p1455.cpp"
    "p1456.cpp"
    "p1457.cpp"
    "p1458.cpp"
    "p1459.cpp"
    "p146.cpp"
    "p1460.cpp"
    "p1461.cpp"
    "p1462.cpp"
    "p1463.cpp"
    "p1464.cpp"
    "p1465.cpp"
    "p1466.cpp"
    "p1467.cpp"
    "p1468.cpp"
    "p1469.cpp"
    "p147.cpp"
    "p1470.cpp"
    "p1471.cpp"
    "p1472.cpp"
    "p1473.cpp"
    "p1474.cpp"
    "p1475.cpp"
    "p1476.cpp"
    "p1477.cpp"
    "p1478.cpp"
    "p1479.cpp"
    "p148.cpp"
    "p1480.cpp"
    "p1481.cpp"
    "p1482.cpp"
    "p1483.cpp"
    "p1484.cpp"
    "p1485.cpp"
    "p1486.cpp"
    "p1487.cpp"
    "p1488.cpp"
    "p1489.cpp"
    "p149.cpp"
    "p1490.cpp"
    "p1491.cpp"
    "p1492.cpp"
    "p1493.cpp"
    "p1494.cpp"
    "p1495.cpp"
    "p1496.cpp"
    "p1497.cpp"
    "p1498.cpp"
    "p1499.cpp"
    "p15.cpp"
    "p150.cpp"
    "p1500.cpp"
    "p1501.cpp"
    "p1502.cpp"
    "p1503.cpp"
    "p1504.cpp"
    "p1505.cpp"
    "p1506.cpp"
    "p1507.cpp"
    "p1508.cpp"
    "p1509.cpp"
    "p151.cpp"
    "p1510.cpp"
    "p1511.cpp"
    "p1512.cpp"
    "p1513.cpp"
    "p1514.cpp"
    "p1515.cpp"
    "p1516.cpp"
    "p1517.cpp"
    "p1518.cpp"
    "p1519.cpp"
    "p152.cpp"
    "p1520.cpp"
    "p1521.cpp"
    "p1522.cpp"
    "p1523.cpp"
    "p1524.cpp"
    "p1525.cpp"
    "p1526.cpp"
    "p1527.cpp"
    "p1528.cpp"
    "p1529.cpp"
    "p153.cpp"
    "p1530.cpp"
    "p1531.cpp"
    "p1532.cpp"
    "p1533.cpp"
    "p1534.cpp"
    "p1535.cpp"
    "p1536.cpp"
    "p1537.cpp"
    "p1538.cpp"
    "p1539.cpp"
    "p154.cpp"
    "p1540.cpp"
    "p1541.cpp"
    "p1542.cpp"
    "p1543.cpp"
    "p1544.cpp"
    "p1545.cpp"
    "p1546.cpp"
    "p1547.cpp"
    "p1548.cpp"
    "p1549.cpp"
    "p155.cpp"
    "p1550.cpp"
    "p1551.cpp"
    "p1552.cpp"
    "p1553.cpp"
    "p1554.cpp"
    "p1555.cpp"
    "p1556.cpp"
    "p1557.cpp"
    "p1558.cpp"
    "p1559.cpp"
    "p156.cpp"
    "p1560.cpp"
    "p1561.cpp"
    "p1562.cpp"
    "p1563.cpp"
    "p1564.cpp"
    "p1565.cpp"
    "p1566.cpp"
    "p1567.cpp"
    "p1568.cpp"
    "p1569.cpp"
    "p157.cpp"
    "p1570.cpp"
    "p1571.cpp"
    "p1572.cpp"
    "p1573.cpp"
    "p1574.cpp"
    "p1575.cpp"
    "p1576.cpp"
    "p1577.cpp"
    "p1578.cpp"
    "p1579.cpp"
    "p158.cpp"
    "p1580.cpp"
    "p1581.cpp"
    "p1582.cpp"
    "p1583.cpp"
    "p1584.cpp"
    "p1585.cpp"
    "p1586.cpp"
    "p1587.cpp"
    "p1588.cpp"
    "p1589.cpp"
    "p159.cpp"
    "p1590.cpp"
    "p1591.cpp"
    "p1592.cpp"
    "p1593.cpp"
    "p1594.cpp"
    "p1595.cpp"
    "p1596.cpp"
    "p1597.cpp"
    "p1598.cpp"
    "p1599.cpp"
    "p16.cpp"
    "p160.cpp"
    "p1600.cpp"
    "p1601.cpp"
    "p1602.cpp"
    "p1603.cpp"
    "p1604.cpp"
    "p1605.cpp"
    "p1606.cpp"
    "p1607.cpp"
    "p1608.cpp"
    "p1609.cpp"
    "p161.cpp"
    "p1610.cpp"
    "p1611.cpp"
    "p1612.cpp"
    "p1613.cpp"
    "p1614.cpp"
    "p1615.cpp"
    "p1616.cpp"
    "p1617.cpp"
    "p1618.cpp"
    "p1619.cpp"
    "p162.cpp"
    "p1620.cpp"
    "p1621.cpp"
    "p1622.cpp"
    "p1623.cpp"
    "p1624.cpp"
    "p1625.cpp"
    "p1626.cpp"
    "p1627.cpp"
    "p1628.cpp"
    "p1629.cpp"
    "p163.cpp"
    "p1630.cpp"
    "p1631.cpp"
    "p1632.cpp"
    "p1633.cpp"
    "p1634.cpp"
    "p1635.cpp"
    "p1636.cpp"
    "p1637.cpp"
    "p1638.cpp"
    "p1639.cpp"
    "p164.cpp"
    "p1640.cpp"
    "p1641.cpp"
    "p1642.cpp"
    "p1643.cpp"
    "p1644.cpp"
    "p1645.cpp"
    "p1646.cpp"
    "p1647.cpp"
    "p1648.cpp"
    "p1649.cpp"
    "p165.cpp"
    "p1650.cpp"
    "p1651.cpp"
    "p1652.cpp"
    "p1653.cpp"
    "p1654.cpp"
    "p1655.cpp"
    "p1656.cpp"
    "p1657.cpp"
    "p1658.cpp"
    "p1659.cpp"
    "p166.cpp"
    "p1660.cpp"
    "p1661.cpp"
    "p1662.cpp"
    "p1663.cpp"
    "p1664.cpp"
    "p1665.cpp"
    "p1666.cpp"
    "p1667.cpp"
    "p1668.cpp"
    "p1669.cpp"
    "p167.cpp"
    "p1670.cpp"
    "p1671.cpp"
    "p1672.cpp"
    "p1673.cpp"
    "p1674.cpp"
    "p1675.cpp"
    "p1676.cpp"
    "p1677.cpp"
    "p1678.cpp"
    "p1679.cpp"
    "p168.cpp"
    "p1680.cpp"
    "p1681.cpp"
    "p1682.cpp"
    "p1683.cpp"
    "p1684.cpp"
    "p1685.cpp"
    "p1686.cpp"
    "p1687.cpp"
    "p1688.cpp"
    "p1689.cpp"
    "p169.cpp"
    "p1690.cpp"
    "p1691.cpp"
    "p1692.cpp"
    "p1693.cpp"
    "p1694.cpp"
    "p1695.cpp"
    "p1696.cpp"
    "p1697.cpp"
    "p1698.cpp"
    "p1699.cpp"
    "p17.cpp"
    "p170.cpp"
    "p1700.cpp"
    "p1701.cpp"
    "p1702.cpp"
    "p1703.cpp"
    "p1704.cpp"
    "p1705.cpp"
    "p1706.cpp"
    "p1707.cpp"
    "p1708.cpp"
    "p1709.cpp"
    "p171.cpp"
    "p1710.cpp"
    "p1711.cpp"
    "p1712.cpp"
    "p1713.cpp"
    "p1714.cpp"
    "p1715.cpp"
    "p1716.cpp"
    "p1717.cpp"
    "p1718.cpp"
    "p1719.cpp"
    "p172.cpp"
    "p1720.cpp"
    "p1721.cpp"
    "p1722.cpp"
    "p1723.cpp"
    "p1724.cpp"
    "p1725.cpp"
    "p1726.cpp"
    "p1727.cpp"
    "p1728.cpp"
    "p1729.cpp"
    "p173.cpp"
    "p1730.cpp"
    "p1731.cpp"
    "p1732.cpp"
    "p1733.cpp"
    "p1734.cpp"
    "p1735.cpp"
    "p1736.cpp"
    "p1737.cpp"
    "p1738.cpp"
    "p1739.cpp"
    "p174.cpp"
    "p1740.cpp"
    "p1741.cpp"
    "p1742.cpp"
    "p1743.cpp"
    "p1744.cpp"
    "p1745.cpp"
    "p1746.cpp"
    "p1747.cpp"
    "p1748.cpp"
    "p1749.cpp"
    "p175.cpp"
    "p1750.cpp"
    "p1751.cpp"
    "p1752.cpp"
    "p1753.cpp"
    "p1754.cpp"
    "p1755.cpp"
    "p1756.cpp"
    "p1757.cpp"
    "p1758.cpp"
    "p1759.cpp"
    "p176.cpp"
    "p1760.cpp"
    "p1761.cpp"
    "p1762.cpp"
    "p1763.cpp"
    "p1764.cpp"
    "p1765.cpp"
    "p1766.cpp"
    "p1767.cpp"
    "p1768.cpp"
    "p1769.cpp"
    "p177.cpp"
    "p1770.cpp"
    "p1771.cpp"
    "p1772.cpp"
    "p1773.cpp"
    "p1774.cpp"
    "p1775.cpp"
    "p1776.cpp"
    "p1777.cpp"
    "p1778.cpp"
    "p1779.cpp"
    "p178.cpp"
    "p1780.cpp"
    "p1781.cpp"
    "p1782.cpp"
    "p1783.cpp"
    "p1784.cpp"
    "p1785.cpp"
    "p1786.cpp"
    "p1787.cpp"
    "p1788.cpp"
    "p1789.cpp"
    "p179.cpp"
    "p1790.cpp"
    "p1791.cpp"
    "p1792.cpp"
    "p1793.cpp"
    "p1794.cpp"
    "p1795.cpp"
    "p1796.cpp"
    "p1797.cpp"
    "p1798.cpp"
    "p1799.cpp"
    "p18.cpp"
    "p180.cpp"
    "p1800.cpp"
    "p181.cpp"
    "p182.cpp"
    "p183.cpp"
    "p184.cpp"
    "p185.cpp"
    "p186.cpp"
    "p187.cpp"
    "p188.cpp"
    "p189.cpp"
    "p19.cpp"
    "p190.cpp"
    "p191.cpp"
    "p192.cpp"
    "p193.cpp"
    "p194.cpp"
    "p195.cpp"
    "p196.cpp"
    "p197.cpp"
    "p198.cpp"
    "p199.cpp"
    "p2.cpp"
    "p20.cpp"
    "p200.cpp"
    "p201.cpp"
    "p202.cpp"
    "p203.cpp"
    "p204.cpp"
    "p205.cpp"
    "p206.cpp"
    "p207.cpp"
    "p208.cpp"
    "p209.cpp"
    "p21.cpp"
    "p210.cpp"
    "p211.cpp"
    "p212.cpp"
    "p213.cpp"
    "p214.cpp"
    "p215.cpp"
    "p216.cpp"
    "p217.cpp"
    "p218.cpp"
    "p219.cpp"
    "p22.cpp"
    "p220.cpp"
    "p221.cpp"
    "p222.cpp"
    "p223.cpp"
    "p224.cpp"
    "p225.cpp"
    "p226.cpp"
    "p227.cpp"
    "p228.cpp"
    "p229.cpp"
    "p23.cpp"
    "p230.cpp"
    "p231.cpp"
    "p232.cpp"
    "p233.cpp"
    "p234.cpp"
    "p235.cpp"
    "p236.cpp"
    "p237.cpp"
    "p238.cpp"
    "p239.cpp"
    "p24.cpp"
    "p240.cpp"
    "p241.cpp"
    "p242.cpp"
    "p243.cpp"
    "p244.cpp"
    "p245.cpp"
    "p246.cpp"
    "p247.cpp"
    "p248.cpp"
    "p249.cpp"
    "p25.cpp"
    "p250.cpp"
    "p251.cpp"
    "p252.cpp"
    "p253.cpp"
    "p254.cpp"
    "p255.cpp"
    "p256.cpp"
    "p257.cpp"
    "p258.cpp"
    "p259.cpp"
    "p26.cpp"
    "p260.cpp"
    "p261.cpp"
    "p262.cpp"
    "p263.cpp"
    "p264.cpp"
    "p265.cpp"
    "p266.cpp"
    "p267.cpp"
    "p268.cpp"
    "p269.cpp"
    "p27.cpp"
    "p270.cpp"
    "p271.cpp"
    "p272.cpp"
    "p273.cpp"
    "p274.cpp"
    "p275.cpp"
    "p276.cpp"
    "p277.cpp"
    "p278.cpp"
    "p279.cpp"
    "p28.cpp"
    "p280.cpp"
    "p281.cpp"
    "p282.cpp"
    "p283.cpp"
    "p284.cpp"
    "p285.cpp"
    "p286.cpp"
    "p287.cpp"
    "p288.cpp"
    "p289.cpp"
    "p29.cpp"
    "p290.cpp"
    "p291.cpp"
    "p292.cpp"
    "p293.cpp"
    "p294.cpp"
    "p295.cpp"
    "p296.cpp"
    "p297.cpp"
    "p298.cpp"
    "p299.cpp"
    "p3.cpp"
    "p30.cpp"
    "p300.cpp"
    "p301.cpp"
    "p302.cpp"
    "p303.cpp"
    "p304.cpp"
    "p305.cpp"
    "p306.cpp"
    "p307.cpp"
    "p308.cpp"
    "p309.cpp"
    "p31.cpp"
    "p310.cpp"
    "p311.cpp"
    "p312.cpp"
    "p313.cpp"
    "p314.cpp"
    "p315.cpp"
    "p316.cpp"
    "p317.cpp"
    "p318.cpp"
    "p319.cpp"
    "p32.cpp"
    "p320.cpp"
    "p321.cpp"
    "p322.cpp"
    "p323.cpp"
    "p324.cpp"
    "p325.cpp"
    "p326.cpp"
    "p327.cpp"
    "p328.cpp"
    "p329.cpp"
    "p33.cpp"
    "p330.cpp"
    "p331.cpp"
    "p332.cpp"
    "p333.cpp"
    "p334.cpp"
    "p335.cpp"
    "p336.cpp"
    "p337.cpp"
    "p338.cpp"
    "p339.cpp"
    "p34.cpp"
    "p340.cpp"
    "p341.cpp"
    "p342.cpp"
    "p343.cpp"
    "p344.cpp"
    "p345.cpp"
    "p346.cpp"
    "p347.cpp"
    "p348.cpp"
    "p349.cpp"
    "p35.cpp"
    "p350.cpp"
    "p351.cpp"
    "p352.cpp"
    "p353.cpp"
    "p354.cpp"
    "p355.cpp"
    "p356.cpp"
    "p357.cpp"
    "p358.cpp"
    "p359.cpp"
    "p36.cpp"
    "p360.cpp"
    "p361.cpp"
    "p362.cpp"
    "p363.cpp"
    "p364.cpp"
    "p365.cpp"
    "p366.cpp"
    "p367.cpp"
    "p368.cpp"
    "p369.cpp"
    "p37.cpp"
    "p370.cpp"
    "p371.cpp"
    "p372.cpp"
    "p373.cpp"
    "p374.cpp"
    "p375.cpp"
    "p376.cpp"
    "p377.cpp"
    "p378.cpp"
    "p379.cpp"
    "p38.cpp"
    "p380.cpp"
    "p381.cpp"
    "p382.cpp"
    "p383.cpp"
    "p384.cpp"
    "p385.cpp"
    "p386.cpp"
    "p387.cpp"
    "p388.cpp"
    "p389.cpp"
    "p39.cpp"
    "p390.cpp"
    "p391.cpp"
    "p392.cpp"
    "p393.cpp"
    "p394.cpp"
    "p395.cpp"
    "p396.cpp"
    "p397.cpp"
    "p398.cpp"
    "p399.cpp"
    "p4.cpp"
    "p40.cpp"
    "p400.cpp"
    "p401.cpp"
    "p402.cpp"
    "p403.cpp"
    "p404.cpp"
    "p405.cpp"
    "p406.cpp"
    "p407.cpp"
    "p408.cpp"
    "p409.cpp"
    "p41.cpp"
    "p410.cpp"
    "p411.cpp"
    "p412.cpp"
    "p413.cpp"
    "p414.cpp"
    "p415.cpp"
    "p416.cpp"
    "p417.cpp"
    "p418.cpp"
    "p419.cpp"
    "p42.cpp"
    "p420.cpp"
    "p421.cpp"
    "p422.cpp"
    "p423.cpp"
    "p424.cpp"
    "p425.cpp"
    "p426.cpp"
    "p427.cpp"
    "p428.cpp"
    "p429.cpp"
    "p43.cpp"
    "p430.cpp"
    "p431.cpp"
    "p432.cpp"
    "p433.cpp"
    "p434.cpp"
    "p435.cpp"
    "p436.cpp"
    "p437.cpp"
    "p438.cpp"
    "p439.cpp"
    "p44.cpp"
    "p440.cpp"
    "p441.cpp"
    "p442.cpp"
    "p443.cpp"
    "p444.cpp"
    "p445.cpp"
    "p446.cpp"
    "p447.cpp"
    "p448.cpp"
    "p449.cpp"
    "p45.cpp"
    "p450.cpp"
    "p451.cpp"
    "p452.cpp"
    "p453.cpp"
    "p454.cpp"
    "p455.cpp"
    "p456.cpp"
    "p457.cpp"
    "p458.cpp"
    "p459.cpp"
    "p46.cpp"
    "p460.cpp"
    "p461.cpp"
    "p462.cpp"
    "p463.cpp"
    "p464.cpp"
    "p465.cpp"
    "p466.cpp"
    "p467.cpp"
    "p468.cpp"
    "p469.cpp"
    "p47.cpp"
    "p470.cpp"
    "p471.cpp"
    "p472.cpp"
    "p473.cpp"
    "p474.cpp"
    "p475.cpp"
    "p476.cpp"
    "p477.cpp"
    "p478.cpp"
    "p479.cpp"
    "p48.cpp"
    "p480.cpp"
    "p481.cpp"
    "p482.cpp"
    "p483.cpp"
    "p484.cpp"
    "p485.cpp"
    "p486.cpp"
    "p487.cpp"
    "p488.cpp"
    "p489.cpp"
    "p49.cpp"
    "p490.cpp"
    "p491.cpp"
    "p492.cpp"
    "p493.cpp"
    "p494.cpp"
    "p495.cpp"
    "p496.cpp"
    "p497.cpp"
    "p498.cpp"
    "p499.cpp"
    "p5.cpp"
    "p50.cpp"
    "p500.cpp"
    "p501.cpp"
    "p502.cpp"
    "p503.cpp"
    "p504.cpp"
    "p505.cpp"
    "p506.cpp"
    "p507.cpp"
    "p508.cpp"
    "p509.cpp"
    "p51.cpp"
    "p510.cpp"
    "p511.cpp"
    "p512.cpp"
    "p513.cpp"
    "p514.cpp"
    "p515.cpp"
    "p516.cpp"
    "p517.cpp"
    "p518.cpp"
    "p519.cpp"
    "p52.cpp"
    "p520.cpp"
    "p521.cpp"
    "p522.cpp"
    "p523.cpp"
    "p524.cpp"
    "p525.cpp"
    "p526.cpp"
    "p527.cpp"
    "p528.cpp"
    "p529.cpp"
    "p53.cpp"
    "p530.cpp"
    "p531.cpp"
    "p532.cpp"
    "p533.cpp"
    "p534.cpp"
    "p535.cpp"
    "p536.cpp"
    "p537.cpp"
    "p538.cpp"
    "p539.cpp"
    "p54.cpp"
    "p540.cpp"
    "p541.cpp"
    "p542.cpp"
    "p543.cpp"
    "p544.cpp"
    "p545.cpp"
    "p546.cpp"
    "p547.cpp"
    "p548.cpp"
    "p549.cpp"
    "p55.cpp"
    "p550.cpp"
    "p551.cpp"
    "p552.cpp"
    "p553.cpp"
    "p554.cpp"
    "p555.cpp"
    "p556.cpp"
    "p557.cpp"
    "p558.cpp"
    "p559.cpp"
    "p56.cpp"
    "p560.cpp"
    "p561.cpp"
    "p562.cpp"
    "p563.cpp"
    "p564.cpp"
    "p565.cpp"
    "p566.cpp"
    "p567.cpp"
    "p568.cpp"
    "p569.cpp"
    "p57.cpp"
    "p570.cpp"
    "p571.cpp"
    "p572.cpp"
    "p573.cpp"
    "p574.cpp"
    "p575.cpp"
    "p576.cpp"
    "p577.cpp"
    "p578.cpp"
    "p579.cpp"
    "p58.cpp"
    "p580.cpp"
    "p581.cpp"
    "p582.cpp"
    "p583.cpp"
    "p584.cpp"
    "p585.cpp"
    "p586.cpp"
    "p587.cpp"
    "p588.cpp"
    "p589.cpp"
    "p59.cpp"
    "p590.cpp"
    "p591.cpp"
    "p592.cpp"
    "p593.cpp"
    "p594.cpp"
    "p595.cpp"
    "p596.cpp"
    "p597.cpp"
    "p598.cpp"
    "p599.cpp"
    "p6.cpp"
    "p60.cpp"
    "p600.cpp"
    "p601.cpp"
    "p602.cpp"
    "p603.cpp"
    "p604.cpp"
    "p605.cpp"
    "p606.cpp"
    "p607.cpp"
    "p608.cpp"
    "p609.cpp"
    "p61.cpp"
    "p610.cpp"
    "p611.cpp"
    "p612.cpp"
    "p613.cpp"
    "p614.cpp"
    "p615.cpp"
    "p616.cpp"
    "p617.cpp"
    "p618.cpp"
    "p619.cpp"
    "p62.cpp"
    "p620.cpp"
    "p621.cpp"
    "p622.cpp"
    "p623.cpp"
    "p624.cpp"
    "p625.cpp"
    "p626.cpp"
    "p627.cpp"
    "p628.cpp"
    "p629.cpp"
    "p63.cpp"
    "p630.cpp"
    "p631.cpp"
    "p632.cpp"
    "p633.cpp"
    "p634.cpp"
    "p635.cpp"
    "p636.cpp"
    "p637.cpp"
    "p638.cpp"
    "p639.cpp"
    "p64.cpp"
    "p640.cpp"
    "p641.cpp"
    "p642.cpp"
    "p643.cpp"
    "p644.cpp"
    "p645.cpp"
    "p646.cpp"
    "p647.cpp"
    "p648.cpp"
    "p649.cpp"
    "p65.cpp"
    "p650.cpp"
    "p651.cpp"
    "p652.cpp"
    "p653.cpp"
    "p654.cpp"
    "p655.cpp"
    "p656.cpp"
    "p657.cpp"
    "p658.cpp"
    "p659.cpp"
    "p66.cpp"
    "p660.cpp"
    "p661.cpp"
    "p662.cpp"
    "p663.cpp"
    "p664.cpp"
    "p665.cpp"
    "p666.cpp"
    "p667.cpp"
    "p668.cpp"
    "p669.cpp"
    "p67.cpp"
    "p670.cpp"
    "p671.cpp"
    "p672.cpp"
    "p673.cpp"
    "p674.cpp"
    "p675.cpp"
    "p676.cpp"
    "p677.cpp"
    "p678.cpp"
    "p679.cpp"
    "p68.cpp"
    "p680.cpp"
    "p681.cpp"
    "p682.cpp"
    "p683.cpp"
    "p684.cpp"
    "p685.cpp"
    "p686.cpp"
    "p687.cpp"
    "p688.cpp"
    "p689.cpp"
    "p69.cpp"
    "p690.cpp"
    "p691.cpp"
    "p692.cpp"
    "p693.cpp"
    "p694.cpp"
    "p695.cpp"
    "p696.cpp"
    "p697.cpp"
    "p698.cpp"
    "p699.cpp"
    "p7.cpp"
    "p70.cpp"
    "p700.cpp"
    "p701.cpp"
    "p702.cpp"
    "p703.cpp"
    "p704.cpp"
    "p705.cpp"
    "p706.cpp"
    "p707.cpp"
    "p708.cpp"
    "p709.cpp"
    "p71.cpp"
    "p710.cpp"
    "p711.cpp"
    "p712.cpp"
    "p713.cpp"
    "p714.cpp"
    "p715.cpp"
    "p716.cpp"
    "p717.cpp"
    "p718.cpp"
    "p719.cpp"
    "p72.cpp"
    "p720.cpp"
    "p721.cpp"
    "p722.cpp"
    "p723.cpp"
    "p724.cpp"
    "p725.cpp"
    "p726.cpp"
    "p727.cpp"
    "p728.cpp"
    "p729.cpp"
    "p73.cpp"
    "p730.cpp"
    "p731.cpp"
    "p732.cpp"
    "p733.cpp"
    "p734.cpp"
    "p735.cpp"
    "p736.cpp"
    "p737.cpp"
    "p738.cpp"
    "p739.cpp"
    "p74.cpp"
    "p740.cpp"
    "p741.cpp"
    "p742.cpp"
    "p743.cpp"
    "p744.cpp"
    "p745.cpp"
    "p746.cpp"
    "p747.cpp"
    "p748.cpp"
    "p749.cpp"
    "p75.cpp"
    "p750.cpp"
    "p751.cpp"
    "p752.cpp"
    "p753.cpp"
    "p754.cpp"
    "p755.cpp"
    "p756.cpp"
    "p757.cpp"
    "p758.cpp"
    "p759.cpp"
    "p76.cpp"
    "p760.cpp"
    "p761.cpp"
    "p762.cpp"
    "p763.cpp"
    "p764.cpp"
    "p765.cpp"
    "p766.cpp"
    "p767.cpp"
    "p768.cpp"
    "p769.cpp"
    "p77.cpp"
    "p770.cpp"
    "p771.cpp"
    "p772.cpp"
    "p773.cpp"
    "p774.cpp"
    "p775.cpp"
    "p776.cpp"
    "p777.cpp"
    "p778.cpp"
    "p779.cpp"
    "p78.cpp"
    "p780.cpp"
    "p781.cpp"
    "p782.cpp"
    "p783.cpp"
    "p784.cpp"
    "p785.cpp"
    "p786.cpp"
    "p787.cpp"
    "p788.cpp"
    "p789.cpp"
    "p79.cpp"
    "p790.cpp"
    "p791.cpp"
    "p792.cpp"
    "p793.cpp"
    "p794.cpp"
    "p795.cpp"
    "p796.cpp"
    "p797.cpp"
    "p798.cpp"
    "p799.cpp"
    "p8.cpp"
    "p80.cpp"
    "p800.cpp"
    "p801.cpp"
    "p802.cpp"
    "p803.cpp"
    "p804.cpp"
    "p805.cpp"
    "p806.cpp"
    "p807.cpp"
    "p808.cpp"
    "p809.cpp"
    "p81.cpp"
    "p810.cpp"
    "p811.cpp"
    "p812.cpp"
    "p813.cpp"
    "p814.cpp"
    "p815.cpp"
    "p816.cpp"
    "p817.cpp"
    "p818.cpp"
    "p819.cpp"
    "p82.cpp"
    "p820.cpp"
    "p821.cpp"
    "p822.cpp"
    "p823.cpp"
    "p824.cpp"
    "p825.cpp"
    "p826.cpp"
    "p827.cpp"
    "p828.cpp"
    "p829.cpp"
    "p83.cpp"
    "p830.cpp"
    "p831.cpp"
    "p832.cpp"
    "p833.cpp"
    "p834.cpp"
    "p835.cpp"
    "p836.cpp"
    "p837.cpp"
    "p838.cpp"
    "p839.cpp"
    "p84.cpp"
    "p840.cpp"
    "p841.cpp"
    "p842.cpp"
    "p843.cpp"
    "p844.cpp"
    "p845.cpp"
    "p846.cpp"
    "p847.cpp"
    "p848.cpp"
    "p849.cpp"
    "p85.cpp"
    "p850.cpp"
    "p851.cpp"
    "p852.cpp"
    "p853.cpp"
    "p854.cpp"
    "p855.cpp"
    "p856.cpp"
    "p857.cpp"
    "p858.cpp"
    "p859.cpp"
    "p86.cpp"
    "p860.cpp"
    "p861.cpp"
    "p862.cpp"
    "p863.cpp"
    "p864.cpp"
    "p865.cpp"
    "p866.cpp"
    "p867.cpp"
    "p868.cpp"
    "p869.cpp"
    "p87.cpp"
    "p870.cpp"
    "p871.cpp"
    "p872.cpp"
    "p873.cpp"
    "p874.cpp"
    "p875.cpp"
    "p876.cpp"
    "p877.cpp"
    "p878.cpp"
    "p879.cpp"
    "p88.cpp"
    "p880.cpp"
    "p881.cpp"
    "p882.cpp"
    "p883.cpp"
    "p884.cpp"
    "p885.cpp"
    "p886.cpp"
    "p887.cpp"
    "p888.cpp"
    "p889.cpp"
    "p89.cpp"
    "p890.cpp"
    "p891.cpp"
    "p892.cpp"
    "p893.cpp"
    "p894.cpp"
    "p895.cpp"
    "p896.cpp"
    "p897.cpp"
    "p898.cpp"
    "p899.cpp"
    "p9.cpp"
    "p90.cpp"
    "p900.cpp"
    "p901.cpp"
    "p902.cpp"
    "p903.cpp"
    "p904.cpp"
    "p905.cpp"
    "p906.cpp"
    "p907.cpp"
    "p908.cpp"
    "p909.cpp"
    "p91.cpp"
    "p910.cpp"
    "p911.cpp"
    "p912.cpp"
    "p913.cpp"
    "p914.cpp"
    "p915.cpp"
    "p916.cpp"
    "p917.cpp"
    "p918.cpp"
    "p919.cpp"
    "p92.cpp"
    "p920.cpp"
    "p921.cpp"
    "p922.cpp"
    "p923.cpp"
    "p924.cpp"
    "p925.cpp"
    "p926.cpp"
    "p927.cpp"
    "p928.cpp"
    "p929.cpp"
    "p93.cpp"
    "p930.cpp"
    "p931.cpp"
    "p932.cpp"
    "p933.cpp"
    "p934.cpp"
    "p935.cpp"
    "p936.cpp"
    "p937.cpp"
    "p938.cpp"
    "p939.cpp"
    "p94.cpp"
    "p940.cpp"
    "p941.cpp"
    "p942.cpp"
    "p943.cpp"
    "p944.cpp"
    "p945.cpp"
    "p946.cpp"
    "p947.cpp"
    "p948.cpp"
    "p949.cpp"
    "p95.cpp"
    "p950.cpp"
    "p951.cpp"
    "p952.cpp"
    "p953.cpp"
    "p954.cpp"
    "p955.cpp"
    "p956.cpp"
    "p957.cpp"
    "p958.cpp"
    "p959.cpp"
    "p96.cpp"
    "p960.cpp"
    "p961.cpp"
    "p962.cpp"
    "p963.cpp"
    "p964.cpp"
    "p965.cpp"
    "p966.cpp"
    "p967.cpp"
    "p968.cpp"
    "p969.cpp"
    "p97.cpp"
    "p970.cpp"
    "p971.cpp"
    "p972.cpp"
    "p973.cpp"
    "p974.cpp"
    "p975.cpp"
    "p976.cpp"
    "p977.cpp"
    "p978.cpp"
    "p979.cpp"
    "p98.cpp"
    "p980.cpp"
    "p981.cpp"
    "p982.cpp"
    "p983.cpp"
    "p984.cpp"
    "p985.cpp"
    "p986.cpp"
    "p987.cpp"
    "p988.cpp"
    "p989.cpp"
    "p99.cpp"
    "p990.cpp"
    "p991.cpp"
    "p992.cpp"
    "p993.cpp"
    "p994.cpp"
    "p995.cpp"
    "p996.cpp"
    "p997.cpp"
    "p998.cpp"
    "p999.cpp"
    "pch.cpp"
    "main.cpp"
)
source_group("Sources" FILES ${Sources})

set(ALL_FILES
    ${Headers}
    ${Sources}
)

add_executable(${PROJECT_NAME} ${ALL_FILES} )

################################################################################
# Target
################################################################################

target_precompile_headers(${PROJECT_NAME} PRIVATE
    "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/pch.h>"
)

################################################################################
# Compile definitions
################################################################################
target_compile_definitions(${PROJECT_NAME} PRIVATE
    "UNICODE;"
    "_UNICODE"
)
target_compile_definitions(${PROJECT_NAME} PRIVATE
    "$<$<CONFIG:Debug>:"
        "DEBUG"
    ">"
    "$<$<CONFIG:Release>:"
        "NDEBUG"
    ">"
)

################################################################################
# Dependencies
################################################################################

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(${PROJECT_NAME} Threads::Threads)

find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} ${GTEST_LIBRARIES})

################################################################################
# Compile and link options
################################################################################
    target_compile_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Debug>:
            -O0;
            ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT}
        >
        -std=c++20;
        ${DEFAULT_CXX_EXCEPTION_HANDLING}
    )
    target_link_options(${PROJECT_NAME} PRIVATE
        $<$<CONFIG:Release>:
            -O3
        >
    )
